# ambiLightSoundWLED

./: CMakeLists.txt  main.cpp
ambiLight/: Ambilight.cpp  Ambilight.h
parseur/: ParserOption.cpp  ParserOption.h
soundLight/: SoundLight.cpp  SoundLight.h  SoundLightColor.cpp  SoundLightColor.h
